[package]
name = "lnlp"
version = "0.1.0"
authors = ["Yam <haoshaochun@gmail.com>"]
edition = "2018"
description = "Last Mile for NLP."
repository = "https://github.com/hscspring/lnlp"
documentation = "https://docs.rs/lnlp"
license = "MIT-2.0"
readme = "README.md"
keywords = ["nlp", "deep-learning", "bert", "transformers", "gpt2"]



[lib]
name = "lnlp"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "convert-tensor"
path = "src/convert-tensor.rs"
doc = false

[[bin]]
name = "main"
path = "src/main.rs"
doc = false


[dependencies]
tch = "0.1.7"
serde = {version = "1.0.112", features = ["derive"]}
serde_json = "1.0"
failure = "0.1.8"